--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,11 @@
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
-<dependency>
+<!-- <dependency>
     <groupId>org.jdom</groupId>
     <artifactId>jdom</artifactId>
     <version>1.1.3</version>
-</dependency>
+</dependency> -->
 
 
 <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
