--- a/.classpath
+++ b/.classpath
@@ -27,12 +27,13 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry kind="lib" path="alipay/alipay-sdk-java20170307171631.jar"/>
-	<classpathentry kind="lib" path="alipay/core-3.2.1.jar"/>
-	<classpathentry kind="lib" path="alipay/javase-3.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/json-lib-2.2-jdk15.jar"/>
 	<classpathentry kind="con" path="com.genuitec.runtime.library/com.genuitec.generic_6.0"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/commons"/>
 	<classpathentry kind="output" path="target/classes"/>
