--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,18 @@
      <classifier>jdk15</classifier>  
 </dependency>
 
+<dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>1.1.41</version>
+    </dependency>
+    
+    <dependency>
+  <groupId>com.alipay.sdk</groupId>
+  <artifactId>alipay-sdk-java</artifactId>
+  <version>3.3.49.ALL</version>
+</dependency>
+
 
   </dependencies>
 </project>
